fixing alignment issue with graph

--- a/css/colors.scss
+++ b/css/colors.scss
@@ -195,7 +195,7 @@ hr{
 	background-color: $vanilla;
 	padding: 5px;
 	position: relative;
-	left: 15%;
+	margin: 0 auto;
 }
 
 dl {
